@@ -1,13 +1,5 @@
 bin_PROGRAMS = calc2skd
 
-dist_bin_SCRIPTS = \
-	jobdisks \
-	joblist \
-	jobstatus \
-	listmodules \
-	listcpus \
-	vlog
-
 calc2skd_SOURCES = \
 	calc2skd.c
 
