@@ -4,6 +4,7 @@ Version 2.5.0
 * Post DiFX 2.4
 * move difxsniff to SniffTools
 * remove example that is no longer valid
+* move some useful and quasi-useful scripts into more appropriate source trees
 
 Version 2.3.0
 * vlog: split ANTAB file into antenna-specific files
